welcome.lessons.welcome.instructions.InstructionsDrawG.scala.code
baisseBrosse()
gauche()
avance()
avance()
avance()
avance()
gauche()
avance()
avance()
avance()
avance()
gauche()
avance()
avance()
avance()
avance()
gauche()
avance()
avance()
gauche()
avance()
leverbrosse()
droite()
avance()
avance()
droite()
avance() 
gauche()